💫 fixing spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -92,6 +92,11 @@ p {
 	flex-grow: 1;
 }
 
+.navbar .button,
+.navbar  button {
+	margin-left: 6px;
+}
+
  button,
 .button {
 	display: block;
